@@ -12,9 +12,11 @@ import com.easyterview.wingterview.global.exception.*;
 import com.easyterview.wingterview.interview.dto.request.*;
 import com.easyterview.wingterview.interview.dto.response.*;
 import com.easyterview.wingterview.interview.entity.*;
+import com.easyterview.wingterview.interview.enums.ParticipantRole;
 import com.easyterview.wingterview.interview.enums.Phase;
 import com.easyterview.wingterview.interview.repository.*;
 import com.easyterview.wingterview.rabbitmq.service.RabbitMqService;
+import com.easyterview.wingterview.user.entity.RecordingEntity;
 import com.easyterview.wingterview.user.entity.UserChatroomEntity;
 import com.easyterview.wingterview.user.entity.UserEntity;
 import com.easyterview.wingterview.user.repository.UserChatroomRepository;
@@ -22,10 +24,6 @@ import com.easyterview.wingterview.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.client.RestTemplate;
@@ -33,8 +31,6 @@ import org.springframework.web.client.RestTemplate;
 import java.sql.Timestamp;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Slf4j
 @Service
@@ -52,6 +48,7 @@ public class InterviewServiceImpl implements InterviewService {
     private final UserChatroomRepository userChatroomRepository;
     private final ChatroomRepository chatroomRepository;
     private final ChatRepository chatRepository;
+    private final InterviewTimeRepository interviewTimeRepository;
 
     private final RabbitMqService rabbitMqService;
 
@@ -74,6 +71,14 @@ public class InterviewServiceImpl implements InterviewService {
             // 인터뷰 다음 분기로 바꾸기
             InterviewEntity interview = interviewOpt.get();
             InterviewStatus nextStatus = InterviewUtil.nextPhase(interview.getRound(), interview.getPhase(), interview.getIsAiInterview());
+            if(!interview.getIsAiInterview() && nextStatus.getPhase().getPhase().equals("progress")){
+                InterviewTimeEntity interviewTime = InterviewTimeEntity.builder()
+                        .endAt(Timestamp.valueOf(LocalDateTime.now().plusMinutes(20)))
+                        .build();
+
+                interviewTime.setInterview(interview);
+                interview.setInterviewTime(interviewTime);
+            }
             interview.setPhase(nextStatus.getPhase());
             interview.setRound(nextStatus.getRound());
 
@@ -96,7 +101,7 @@ public class InterviewServiceImpl implements InterviewService {
 
     @Override
     @Transactional
-    public InterviewStatusDto getInterviewStatus() {
+    public Object getInterviewStatus() {
 
         // 유저 정보 -> 인터뷰 정보 가져오기
         UserEntity user = userRepository.findById(UUIDUtil.getUserIdFromToken())
@@ -105,143 +110,194 @@ public class InterviewServiceImpl implements InterviewService {
                 .orElseThrow(UserNotParticipatedException::new);
         InterviewEntity interview = interviewParticipant.getInterview();
 
-        // 상대방 정보 가져오기
-        InterviewParticipantEntity partnerParticipant = interview.getParticipants()
-                .stream()
-                .filter(i -> !i.getUser().getId().equals(user.getId()))
-                .findFirst()
-                .orElseThrow(() -> new RuntimeException("상대 유저를 찾을 수 없습니다."));
-        UserEntity partnerEntity = partnerParticipant.getUser();
+        if (!interview.getIsAiInterview()) {
+            // 상대방 정보 가져오기
+            InterviewParticipantEntity partnerParticipant = interview.getParticipants()
+                    .stream()
+                    .filter(i -> !i.getUser().getId().equals(user.getId()))
+                    .findFirst()
+                    .orElseThrow(UserNotFoundException::new);
+            UserEntity partnerEntity = partnerParticipant.getUser();
 
-        // 남은 시간 계산
-        int timeRemain = TimeUtil.getRemainTime(interview.getPhaseAt(), InterviewStatus.builder().round(interview.getRound()).phase(interview.getPhase()).build());
+            Optional<InterviewTimeEntity> interviewTime = interviewTimeRepository.findByInterview(interview);
+            Integer timeRemain = interviewTime.map(interviewTimeEntity -> TimeUtil.getRemainTime(interviewTimeEntity.getEndAt())).orElse(null);
 
-        // 내가 현재 인터뷰어인지 확인
-        boolean isInterviewer = InterviewUtil.checkInterviewer(interviewParticipant.getRole(), interview.getRound());
+            // 내가 현재 인터뷰어인지 확인
+            boolean isInterviewer = InterviewUtil.checkInterviewer(interviewParticipant.getRole(), interview.getRound());
 
-        // 상대방 정보 dto
-        Partner partner = Partner.builder()
-                .name(partnerEntity.getName())
-                .nickname(partnerEntity.getNickname())
-                .profileImageUrl(partnerEntity.getProfileImageUrl())
-                .techStack(partnerEntity.getUserTechStack().stream().map(t -> t.getTechStack().getLabel()).toList())
-                .jobInterest(partnerEntity.getUserJobInterest().stream().map(j -> j.getJobInterest().getLabel()).toList())
-                .curriculum(partnerEntity.getCurriculum())
-                .build();
+            // 상대방 정보 dto
+            Partner partner = Partner.builder()
+                    .name(partnerEntity.getName())
+                    .nickname(partnerEntity.getNickname())
+                    .profileImageUrl(partnerEntity.getProfileImageUrl())
+                    .techStack(partnerEntity.getUserTechStack().stream().map(t -> t.getTechStack().getLabel()).toList())
+                    .jobInterest(partnerEntity.getUserJobInterest().stream().map(j -> j.getJobInterest().getLabel()).toList())
+                    .curriculum(partnerEntity.getCurriculum())
+                    .build();
 
-        int questionIdx = -1;
-        String selectedQuestion = "";
-        List<String> questionOptions = null;
-        if (interview.getPhase().equals(Phase.PROGRESS)) {
-            Optional<QuestionHistoryEntity> questionHistory = questionHistoryRepository.findByInterview(interview);
-            Optional<QuestionOptionsEntity> questionOption = questionOptionsRepository.findTop1ByInterviewOrderByCreatedAtDesc(interview);
-            if (questionOption.isPresent()) {
-                questionOptions = new ArrayList<>();
-                questionOptions.add(questionOption.get().getFirstOption());
-                questionOptions.add(questionOption.get().getSecondOption());
-                questionOptions.add(questionOption.get().getThirdOption());
-                questionOptions.add(questionOption.get().getFourthOption());
+            int questionIdx = -1;
+            String selectedQuestion = "";
+            List<String> questionOptions = null;
+            if (interview.getPhase().equals(Phase.PROGRESS)) {
+                Optional<QuestionHistoryEntity> questionHistory = questionHistoryRepository.findByInterview(interview);
+                List<QuestionOptionsEntity> questionOption = questionOptionsRepository.findTop4ByInterviewOrderByCreatedAtDesc(interview);
+                if (!questionOption.isEmpty()) {
+                    questionOptions = new ArrayList<>(questionOption.stream().map(QuestionOptionsEntity::getOption).toList());
+                }
+                questionIdx = questionHistory.isPresent() ? questionHistory.get().getSelectedQuestionIdx() : -1;
+                selectedQuestion = questionHistory.isPresent() ? questionHistory.get().getSelectedQuestion() : "";
             }
-            questionIdx = questionHistory.isPresent() ? questionHistory.get().getSelectedQuestionIdx() : -1;
-            selectedQuestion = questionHistory.isPresent() ? questionHistory.get().getSelectedQuestion() : "";
+
+
+            // 인터뷰 상태 dto 반환
+            return InterviewStatusDto.builder()
+                    .interviewId(String.valueOf(interview.getId()))
+                    .timeRemain(timeRemain)
+                    .currentRound(interview.getRound())
+                    .currentPhase(interview.getPhase().getPhase())
+                    .isInterviewer(isInterviewer)
+                    .isAiInterview(false)
+                    .partner(partner)
+                    .questionIdx(questionIdx)
+                    .selectedQuestion(selectedQuestion)
+                    .questionOption(questionOptions)
+                    .build();
+
         }
+        // AI Interview
+        else {
+            int questionIdx = -1;
+            String question = "";
+            Optional<InterviewTimeEntity> interviewTime = interviewTimeRepository.findByInterview(interview);
+            Integer timeRemain = interviewTime.map(interviewTimeEntity -> TimeUtil.getRemainTime(interviewTimeEntity.getEndAt())).orElse(null);
 
+            if (interview.getPhase().equals(Phase.PROGRESS)) {
+                Optional<QuestionHistoryEntity> questionHistory = questionHistoryRepository.findByInterview(interview);
+                questionIdx = questionHistory.isPresent() ? questionHistory.get().getSelectedQuestionIdx() : -1;
+                question = questionHistory.isPresent() ? questionHistory.get().getSelectedQuestion() : "";
+            }
 
-        // 인터뷰 상태 dto 반환
-        return InterviewStatusDto.builder()
-                .interviewId(String.valueOf(interview.getId()))
-                .timeRemain(timeRemain)
-                .currentRound(interview.getRound())
-                .currentPhase(interview.getPhase().getPhase())
-                .isInterviewer(isInterviewer)
-                .isAiInterview(interview.getIsAiInterview())
-                .partner(partner)
-                .questionIdx(questionIdx)
-                .selectedQuestion(selectedQuestion)
-                .questionOption(questionOptions)
-                .build();
-
+            return AiInterviewInfoDto.builder()
+                    .InterviewId(String.valueOf(interview.getId()))
+                    .currentPhase(interview.getPhase().getPhase())
+                    .isAiInterview(true)
+                    .question(question)
+                    .questionIdx(questionIdx)
+                    .timeRemain(timeRemain)
+                    .build();
+        }
     }
 
     @Override
     @Transactional
-    public QuestionCreationResponseDto makeQuestion(String interviewId, QuestionCreationRequestDto dto) {
-        log.info("*******Make Question 로그********8");
+    public Object makeQuestion(String interviewId, QuestionCreationRequestDto dto) {
+        log.info("*******Make Question 로그********");
         log.info(dto.toString());
+
+        InterviewEntity interview = interviewRepository.findById(UUID.fromString(interviewId))
+                .orElseThrow(InterviewNotFoundException::new);
+        UserEntity user = userRepository.findById(UUIDUtil.getUserIdFromToken())
+                .orElseThrow(InvalidTokenException::new);
 
         // 1. question == null 메인질문 생성
         if (dto.getQuestion().isEmpty()) {
-            // TODO : 메인질문 중복처리를 위한 user_main_question ??
-            InterviewEntity interview = interviewRepository.findById(UUID.fromString(interviewId))
-                    .orElseThrow(InterviewNotFoundException::new);
-            UserEntity user = userRepository.findById(UUIDUtil.getUserIdFromToken())
-                    .orElseThrow(InvalidTokenException::new);
-            // 다른 참가자 추출하기(면접관이 아닌 면접자와 관련된 기술스택, 희망직무)
-            List<InterviewParticipantEntity> otherParticipantList = interviewParticipantRepository.findByInterview(interview)
-                    .stream().filter(i -> !i.getUser().getId().equals(user.getId())).toList();
-            UserEntity otherUser = otherParticipantList.getFirst().getUser();
+            List<String> questions;
+            if (interview.getIsAiInterview()) {
+                // 희망 직무, 테크스택 관련 메인 질문 뽑아오기
+                List<String> jobInterests = user.getUserJobInterest().stream()
+                        .map(j -> j.getJobInterest().name())
+                        .toList();
 
 
-            // 희망 직무, 테크스택 관련 메인 질문 뽑아오기
-            List<String> jobInterests = otherUser.getUserJobInterest().stream()
-                    .map(j -> j.getJobInterest().name())
-                    .collect(Collectors.toList());
+                List<String> techStacks = user.getUserTechStack().stream()
+                        .map(t -> t.getTechStack().name())
+                        .toList();
+
+                questions = mainQuestionRepository
+                        .findRandomMatchingQuestions(jobInterests, techStacks).stream()
+                        .map(MainQuestionEntity::getContents)
+                        .toList();
+
+                QuestionHistoryEntity questionHistory = interview.getQuestionHistory();
+                if(questionHistory == null){
+                    questionHistoryRepository.save(QuestionHistoryEntity.builder()
+                            .interview(interview)
+                            .selectedQuestion(questions.getFirst())
+                            .selectedQuestionIdx(1)
+                            .build()
+                    );
+                }
+                else{
+                    Integer questionIdx = questionHistory.getSelectedQuestionIdx();
+                    questionHistory.setSelectedQuestion(questions.getFirst());
+                    questionHistory.setSelectedQuestionIdx(questionIdx+1);
+                    questionHistoryRepository.save(questionHistory);
+                }
+
+                receivedQuestionRepository.save(ReceivedQuestionEntity.builder()
+                        .contents(questions.getFirst())
+                        .receivedAt(Timestamp.valueOf(LocalDateTime.now()))
+                        .user(user)
+                        .build()
+                );
+
+                return AiQuestionCreationResponseDto.builder()
+                        .question(questions.getFirst())
+                        .build();
+            } else {
+
+                // 다른 참가자 추출하기(면접관이 아닌 면접자와 관련된 기술스택, 희망직무)
+                List<InterviewParticipantEntity> otherParticipantList = interviewParticipantRepository.findByInterview(interview)
+                        .stream().filter(i -> !i.getUser().getId().equals(user.getId())).toList();
+                UserEntity otherUser = otherParticipantList.getFirst().getUser();
 
 
-            List<String> techStacks = otherUser.getUserTechStack().stream()
-                    .map(t -> t.getTechStack().name())
-                    .collect(Collectors.toList());
+                // 희망 직무, 테크스택 관련 메인 질문 뽑아오기
+                List<String> jobInterests = otherUser.getUserJobInterest().stream()
+                        .map(j -> j.getJobInterest().name())
+                        .toList();
 
-            List<String> questions = mainQuestionRepository
-                    .findRandomMatchingQuestions(jobInterests, techStacks).stream()
-                    .map(MainQuestionEntity::getContents)
-                    .toList();
+
+                List<String> techStacks = otherUser.getUserTechStack().stream()
+                        .map(t -> t.getTechStack().name())
+                        .toList();
+
+                questions = mainQuestionRepository
+                        .findRandomMatchingQuestions(jobInterests, techStacks).stream()
+                        .map(MainQuestionEntity::getContents)
+                        .toList();
+
+            }
 
             // questionOptions 저장하기
-            QuestionOptionsEntity questionOptions = QuestionOptionsEntity.builder()
-                    .firstOption(questions.get(0))
-                    .secondOption(questions.get(1))
-                    .thirdOption(questions.get(2))
-                    .fourthOption(questions.get(3))
-                    .interview(interview)
-                    .build();
-
-            questionOptions.setInterview(interview); // 연관관계 주인 설정
-            interview.getQuestionOptionsList().add(questionOptions); // 양방향 연관관계 동기화
-            questionOptionsRepository.save(questionOptions); // 주인 저장
-
+            questions.forEach(q -> {
+                QuestionOptionsEntity questionOption = QuestionOptionsEntity.builder().option(q).build();
+                questionOption.setInterview(interview);
+                interview.getQuestionOptions().add(questionOption);// 양방향 연관관계 동기화
+                questionOptionsRepository.save(questionOption);
+            });
 
             // question responsebody
             return QuestionCreationResponseDto.builder()
                     .questions(questions)
                     .build();
         } else {
-            InterviewEntity interview = interviewRepository.findById(UUID.fromString(interviewId)).orElseThrow(InterviewNotFoundException::new);
             // 2. QuestionHistory가 있으면서 이전 Question이 똑같음 -> 꼬리질문 재생성한거임 -> passed Question 넣어서 AI에 보내기. + passed Question 누적
             if (interview.getQuestionHistory() != null && dto.getQuestion().equals(interview.getQuestionHistory().getSelectedQuestion())) {
                 // 최근 20개를 가져와서 passed question 구성하기
-                List<String> passedQuestions = questionOptionsRepository.findTop5ByOrderByCreatedAtDesc()
+                List<String> passedQuestions = questionOptionsRepository.findTop20ByOrderByCreatedAtDesc()
                         .stream()
-                        .flatMap(q -> Stream.of(
-                                q.getFirstOption(),
-                                q.getSecondOption(),
-                                q.getThirdOption(),
-                                q.getFourthOption()
-                        ))
-                        .collect(Collectors.toList());
-
-                String selectedQuestion = interview.getQuestionHistory().getSelectedQuestion();
-
-                String keyword = dto.getKeywords();
+                        .map(QuestionOptionsEntity::getOption)
+                        .toList();
 
                 FollowUpQuestionRequest request = FollowUpQuestionRequest.builder()
                         .interviewId(interviewId)
-                        .selectedQuestion(selectedQuestion)
-                        .keyword(keyword)
+                        .selectedQuestion(dto.getQuestion())
+                        .keyword(dto.getKeywords())
                         .passedQuestions(passedQuestions.isEmpty() ? null : passedQuestions)
                         .build();
 
-                /* 실험 부분 */
+                /* legacy code */
 
 //                HttpHeaders headers = new HttpHeaders();
 //                headers.setContentType(MediaType.APPLICATION_JSON);
@@ -260,26 +316,48 @@ public class InterviewServiceImpl implements InterviewService {
 
 
                 FollowUpQuestionResponseDto response = rabbitMqService.sendFollowUpBlocking(request);
-
-
                 List<String> questions = response.getFollowupQuestions();
 
-                QuestionOptionsEntity questionOptions = QuestionOptionsEntity.builder()
-                        .firstOption(questions.get(0))
-                        .secondOption(questions.get(1))
-                        .thirdOption(questions.get(2))
-                        .fourthOption(questions.get(3))
-                        .interview(interview)
-                        .build();
+                if(!interview.getIsAiInterview()){
+                    // questionOptions 저장하기
+                    questions.forEach(q -> {
+                        QuestionOptionsEntity questionOption = QuestionOptionsEntity.builder().option(q).build();
+                        questionOption.setInterview(interview);
+                        interview.getQuestionOptions().add(questionOption);// 양방향 연관관계 동기화
+                        questionOptionsRepository.save(questionOption);
+                    });
 
+                    return QuestionCreationResponseDto.builder()
+                            .questions(questions)
+                            .build();
+                }
 
+                // ai라면 생성과 동시에 history에 저장해야함. -> select가 분리되어 있지 않기때문
+                QuestionHistoryEntity questionHistory = interview.getQuestionHistory();
+                if(questionHistory == null){
+                    questionHistoryRepository.save(QuestionHistoryEntity.builder()
+                            .interview(interview)
+                            .selectedQuestion(questions.getFirst())
+                            .selectedQuestionIdx(1)
+                            .build()
+                    );
+                }
+                else{
+                    Integer questionIdx = questionHistory.getSelectedQuestionIdx();
+                    questionHistory.setSelectedQuestion(questions.getFirst());
+                    questionHistory.setSelectedQuestionIdx(questionIdx+1);
+                    questionHistoryRepository.save(questionHistory);
+                }
 
-                questionOptionsRepository.save(questionOptions);
+                receivedQuestionRepository.save(ReceivedQuestionEntity.builder()
+                        .contents(questions.getFirst())
+                        .receivedAt(Timestamp.valueOf(LocalDateTime.now()))
+                        .user(user)
+                        .build()
+                );
 
-                log.info("✅ 꼬리질문 저장 완료: {}", questionOptions);
-
-                return QuestionCreationResponseDto.builder()
-                        .questions(questions)
+                return AiQuestionCreationResponseDto.builder()
+                        .question(questions.getFirst())
                         .build();
             }
 
@@ -289,11 +367,11 @@ public class InterviewServiceImpl implements InterviewService {
                 // 꼬리 질문 요청용 DTO 생성
                 FollowUpQuestionRequest requestDto = FollowUpQuestionRequest.builder()
                         .interviewId(interviewId)
-                        .selectedQuestion(interview.getQuestionHistory().getSelectedQuestion())
+                        .selectedQuestion(dto.getQuestion())
                         .keyword(dto.getKeywords())
                         .build();
 
-                /* 실험 부분 */
+                /* legacy code */
 
 //                HttpHeaders headers = new HttpHeaders();
 //                headers.setContentType(MediaType.APPLICATION_JSON);
@@ -314,22 +392,45 @@ public class InterviewServiceImpl implements InterviewService {
 
                 List<String> questions = response.getFollowupQuestions();
 
-                QuestionOptionsEntity questionOptions = QuestionOptionsEntity.builder()
-                        .firstOption(questions.get(0))
-                        .secondOption(questions.get(1))
-                        .thirdOption(questions.get(2))
-                        .fourthOption(questions.get(3))
-                        .interview(interview)
-                        .build();
+                if(!interview.getIsAiInterview()){
+                    // questionOptions 저장하기
+                    questions.forEach(q -> {
+                        QuestionOptionsEntity questionOption = QuestionOptionsEntity.builder().option(q).build();
+                        questionOption.setInterview(interview);
+                        interview.getQuestionOptions().add(questionOption);// 양방향 연관관계 동기화
+                    });
 
+                    return QuestionCreationResponseDto.builder()
+                            .questions(questions)
+                            .build();
+                }
 
+                // ai라면 생성과 동시에 history에 저장해야함. -> select가 분리되어 있지 않기때문
+                QuestionHistoryEntity questionHistory = interview.getQuestionHistory();
+                if(questionHistory == null){
+                    questionHistoryRepository.save(QuestionHistoryEntity.builder()
+                            .interview(interview)
+                            .selectedQuestion(questions.getFirst())
+                            .selectedQuestionIdx(1)
+                            .build()
+                    );
+                }
+                else{
+                    Integer questionIdx = questionHistory.getSelectedQuestionIdx();
+                    questionHistory.setSelectedQuestion(questions.getFirst());
+                    questionHistory.setSelectedQuestionIdx(questionIdx+1);
+                    questionHistoryRepository.save(questionHistory);
+                }
 
-                questionOptionsRepository.save(questionOptions);
+                receivedQuestionRepository.save(ReceivedQuestionEntity.builder()
+                        .contents(questions.getFirst())
+                        .receivedAt(Timestamp.valueOf(LocalDateTime.now()))
+                        .user(user)
+                        .build()
+                );
 
-                log.info("✅ 꼬리질문 저장 완료: {}", questionOptions);
-
-                return QuestionCreationResponseDto.builder()
-                        .questions(questions)
+                return AiQuestionCreationResponseDto.builder()
+                        .question(questions.getFirst())
                         .build();
             }
         }
@@ -341,19 +442,12 @@ public class InterviewServiceImpl implements InterviewService {
 
         InterviewEntity interview = interviewRepository.findById(UUID.fromString(interviewId))
                 .orElseThrow(InterviewNotFoundException::new);
-        QuestionOptionsEntity questionOptions = questionOptionsRepository.findTop1ByInterviewOrderByCreatedAtDesc(interview)
-                .orElseThrow(QuestionOptionNotFoundException::new);
+        List<QuestionOptionsEntity> questionOptions = questionOptionsRepository.findTop4ByInterviewOrderByCreatedAtDesc(interview);
         UserEntity user = userRepository.findById(UUIDUtil.getUserIdFromToken())
                 .orElseThrow(InvalidTokenException::new);
 
         // 선택한 질문 골라내기
-        String selectedQuestion = switch (dto.getSelectedIdx()) {
-            case 1 -> questionOptions.getFirstOption();
-            case 2 -> questionOptions.getSecondOption();
-            case 3 -> questionOptions.getThirdOption();
-            case 4 -> questionOptions.getFourthOption();
-            default -> throw new IllegalArgumentException("선택 인덱스는 1~4 사이여야 합니다.");
-        };
+        String selectedQuestion = questionOptions.get(dto.getSelectedIdx()).getOption();
 
         // 질문 History 덮어쓰기
         Optional<QuestionHistoryEntity> oldQuestionHistoryOpt = questionHistoryRepository.findByInterview(interview);
@@ -450,5 +544,67 @@ public class InterviewServiceImpl implements InterviewService {
                 .build();
 
         chatRepository.save(newChat);
+    }
+
+    @Override
+    @Transactional
+    public AiInterviewResponseDto startAiInterview() {
+        UserEntity user = userRepository.findById(UUIDUtil.getUserIdFromToken())
+                .orElseThrow(InvalidTokenException::new);
+
+        InterviewParticipantEntity interviewee = InterviewParticipantEntity.builder()
+                .user(user)
+                .role(ParticipantRole.SECOND_INTERVIEWER)
+                .build();
+
+        List<InterviewParticipantEntity> participants = List.of(interviewee);
+
+        InterviewEntity interview = InterviewEntity.builder()
+                .participants(participants)
+                .isAiInterview(true)
+                .build();
+
+        interviewee.setInterview(interview);
+
+        UUID interviewId = interviewRepository.save(interview).getId();
+
+        return AiInterviewResponseDto.builder()
+                .interviewId(String.valueOf(interviewId))
+                .build();
+    }
+
+    @Override
+    @Transactional
+    public void initializeInterviewTime(String interviewId, TimeInitializeRequestDto dto) {
+        InterviewEntity interview = interviewRepository.findById(UUID.fromString(interviewId))
+                .orElseThrow(InterviewNotFoundException::new);
+
+        InterviewTimeEntity interviewTime = InterviewTimeEntity.builder()
+                .endAt(Timestamp.valueOf(LocalDateTime.now().plusMinutes(dto.getTime())))
+                .interview(interview)
+                .build();
+
+        interview.setInterviewTime(interviewTime);
+
+        interviewTimeRepository.save(interviewTime);
+    }
+
+    @Override
+    @Transactional
+    public void exitInterview(String interviewId) {
+        InterviewEntity interview = interviewRepository.findById(UUID.fromString(interviewId))
+                .orElseThrow(InterviewNotFoundException::new);
+        UserEntity user = interview.getParticipants().getFirst().getUser();
+
+        RecordingEntity recording = user.getRecordingEntity();
+        String userId = String.valueOf(user.getId());
+        // TODO : STT 분석 요청하기
+
+        interviewRepository.delete(interview);
+    }
+
+    @Override
+    public void getFeedbackFromAI(String userId, FeedbackCallbackDto dto) {
+        // TODO : 피드백 결과를 어떻게 저장할지 entity, api 구성해야함
     }
 }
